--- a/responsiveWebsite/index.html
+++ b/responsiveWebsite/index.html
@@ -24,6 +24,9 @@
 </head>
 
 <body>
+
+
+    <!-- -MAIN NAVIGATION BAR -->
     <nav>
         <div class="container nav__container">
             <a href="index.html">
@@ -40,6 +43,27 @@
 
         </div>
     </nav>
+
+    <!-- * START header -->
+    <header>
+        <div class="container header__container">
+
+            <div class="header__left">
+                <h1>Grow your skills to advance your career path</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus dignissimos incidunt ullam, inventore blanditiis necessitatibus autem ducimus aspernatur asperiores consequatur.
+                </p>
+                <a href="courses.html" class="btn btn-primary">Get Started</a>
+            </div><!-- ! END .header__left -->
+
+            <div class="header__right">
+                <div class="header__right-image">
+                    <img src="./images/header.svg" alt="">
+                </div>
+            </div><!-- ! END .header__right -->
+        </div><!-- ! END container header__container -->
+    </header>
+    <!-- ! END header -->
 </body>
 
 </html>
