adding comments to separate and make readable on index

--- a/responsiveWebsite/index.html
+++ b/responsiveWebsite/index.html
@@ -26,8 +26,9 @@
 <body>
 
 
-    <!-- -MAIN NAVIGATION BAR -->
+    <!-- * Navigation -->
     <nav>
+
         <div class="container nav__container">
             <a href="index.html">
                 <h4>EGATOR</h4>
@@ -41,8 +42,14 @@
             <button id="open-menu-btn"><i class="fas fa-align-justify"></i></button>
             <button class="close-menu-btn"><i class="fas fa-align-justify"></i></button>
 
-        </div>
+        </div><!-- ! END container nav__container -->
+
     </nav>
+    <!-- ! END Navigation-->
+
+
+
+
 
     <!-- * START header -->
     <header>
@@ -61,9 +68,17 @@
                     <img src="./images/header.svg" alt="">
                 </div>
             </div><!-- ! END .header__right -->
+
         </div><!-- ! END container header__container -->
+
     </header>
     <!-- ! END header -->
+
+
+
+
+
+    
 </body>
 
 </html>
