--- a/responsiveWebsite/index.html
+++ b/responsiveWebsite/index.html
@@ -10,9 +10,7 @@
     <!-- 
         - FONT AWESOME CDN v5.4.0
      -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.4.0/css/all.min.css"
-        integrity="sha512-eBNnVs5xPOVglLWDGXyZnZZ2K2ixXhR/3aECgCpFnW2dGCd/yiqXZ6fcB3BubeA91kM6NX234b6Wrah8RiYAPA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha512-9BwLAVqqt6oFdXohPLuNHxhx36BVj5uGSGmizkmGkgl3uMSgNalKc/smum+GJU/TTP0jy0+ruwC3xNAk3F759A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- 
         - GOOGLE FONTS Montserrat
      -->
@@ -58,7 +56,8 @@
             <div class="header__left">
                 <h1>Grow your skills to advance your career path</h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus dignissimos incidunt ullam, inventore blanditiis necessitatibus autem ducimus aspernatur asperiores consequatur.
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus dignissimos incidunt ullam,
+                    inventore blanditiis necessitatibus autem ducimus aspernatur asperiores consequatur.
                 </p>
                 <a href="courses.html" class="btn btn-primary">Get Started</a>
             </div><!-- ! END .header__left -->
@@ -75,10 +74,76 @@
     <!-- ! END header -->
 
 
+    <section class="categories">
+
+        <div class="container categories__container">
+
+            <div class="categories__left">
+                <h1>Categories</h1>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad laboriosam labore quae vel odio
+                    sapiente nesciunt itaque, distinctio similique nobis neque excepturi dolor error culpa incidunt
+                    ipsam, aliquid assumenda eaque?
+                </p>
+                <a href="#" class="btn">Learn More</a>
+            </div><!-- ! END categories__left -->
+
+            <div class="categories__right">
+
+                <article class="category">
+                    <span class="category__icon"><i class="fab fa-bitcoin"></i></span>
+                    <h5>Blockchain</h5>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, libero?
+                    </p>
+                </article>
+
+                <article class="category">
+                    <span class="category__icon"><i class="fas fa-palette"></i></span>
+                    <h5>Graphic Design</h5>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, libero?
+                    </p>
+                </article>
+
+                <article class="category">
+                    <span class="category__icon"><i class="fas fa-balance-scale-left"></i></span>
+                    <h5>Finance</h5>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, libero?
+                    </p>
+                </article>
+
+                <article class="category">
+                    <span class="category__icon"><i class="fab fa-bitcoin"></i></span>
+                    <h5>Marketing</h5>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, libero?
+                    </p>
+                </article>
+
+                <article class="category">
+                    <span class="category__icon"><i class="fas fa-music"></i></span>
+                    <h5>Music</h5>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, libero?
+                    </p>
+                </article>
+
+                <article class="category">
+                    <span class="category__icon"><i class="fas fa-business-time"></i></span>
+                    <h5>Business</h5>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, libero?
+                    </p>
+                </article>
+
+            </div><!-- ! END categories__right -->
+        </div><!-- ! END container categories__container -->
+    </section><!-- ! END section.categories-->
 
 
 
-    
 </body>
 
 </html>
