--- a/DeconTrailerOperations/00index.html
+++ b/DeconTrailerOperations/00index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechDecon Guide</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/_nav.css">
+    <link rel="stylesheet" href="./css/_header.css">
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/_content.css">
     <style>
 
         /*
@@ -85,95 +90,7 @@
 
 
 
-        *{
-            padding:0;
-            margin: 0;
-            outline: 0;
-            text-decoration: none;
-            list-style: none;
-            box-sizing: border-box;
-        }
-        :root{
-            --color-primary: rgb(243, 255, 11);
-            --color-danger: red;
-            --color-warning: orange;
-            --color-success: limegreen;
-            --color-white: #fff;
-            --color-black: #000;
-            --color-bg: #efefef;
-            --color-bg1: blue;
-            --color-bg2: blue;
-
-            --container-sz-lg: 80%;
-            --container-sz-md: 85%;
-            --container-sz-sm: 90%;
-
-            --transition: all 1s ease-in-out;
-        }
-
-        body{
-            background-color: var(--color-bg);
-            font-size: 16px;
-
-        }
-        h1,h2,h3,h4,h5,h6{
-            line-height: 1.2rem;
-        }
-        h1{
-            line-height: 2.2rem;
-        }
-        h2{
-            line-height: 1.8rem;
-        }
-        h3{
-            font-size: 1.6rem;
-        }
-        h4{
-            font-size: 1.4rem;
-        }
-        .main-container{
-            height: 100vh;
-            display: grid;
-            grid-template-columns: 2fr 8fr;
-            grid-template-rows: .1fr 1fr;
-            grid-template-areas: 
-            "nav header"
-            "nav main";
-        }
-
-        nav{
-            grid-area: nav;
-            background-color: var(--color-bg1);
-        }
-        .container{
-            width: 90%;
-        }
-        .nav-container a{
-            color: var(--color-primary);
-        }
-        .nav-container #logo{
-            font-weight: 900;
-        }
-        .nav-container .nav-menu{
-            display: flex;
-            flex-direction: column;
-            gap: 2rem;
-        }
-        .nav-container .nav-menu ul.nav-sub-menu{
-            display: none;
-            margin-left: 1rem;
-            list-style-type: circle;
-        }
-        .nav-menu:focus-within > .nav-sub-menu{
-            display: block;
-        }
         
-        header{
-            grid-area: header;
-        }
-        div.content{
-            grid-area: main;
-        }
     </style>
 </head>
 <body>
@@ -184,7 +101,7 @@
                 <ul class="nav-menu">
                     <li>
                         <a id="startUp_mainNavItem" href="#">Start Up</a>
-                        <ul id="startUp_subMenu" class="nav-sub-menu">
+                        <ul id="startUp_subMenu" class="nav-subMenu">
                             <li><a href="#">Location Selection</a></li>
                             <li><a href="#">Powering the Trailer</a></li>
                             <li><a href="#">Set Up Trailer</a></li>
@@ -194,51 +111,51 @@
                     </li>
                     <li>
                         <a class="deconOps_mainNavItem" href="#">Decon Operations</a>
-                        <ul id="deconOps_subMenu" class="nav-sub-item">
+                        <ul id="deconOps_subMenu" class="nav-subMenu">
 
                         </ul>
                     </li>
                     <li>
                         <a id="tearDwn_mainNavItem" href="#">Tear Down</a>
-                        <ul id="tearDwn_subMenu" class="nav-sub-menu">
+                        <ul id="tearDwn_subMenu" class="nav-subMenu">
 
                         </ul>
                     </li>
                     <li>
                         <a id="trans_mainNavItem" href="#">Transportations</a>
-                        <ul class="nav-sub-menu">
+                        <ul class="nav-subMenu">
 
                         </ul>
                     </li>
                 </ul>
             </div>
         </nav>
+
+
+
+
         <header>
             <h1>NG-C130 Gen3 Mass Decon Trailer Operations Manual</h1>
         </header>
-        <div class="content">
-            content
+
+
+
+        <div class="container content-container">
+            <div class="illustration">
+                <img src="./images/stock/IMG_20220609_151823544_HDR.jpg" alt="">
+            </div>
+            
+        </div>
+
+
+
+        <div class="container content-controller-container">
+            <a href="#">Begin</a>
         </div>
     </div>
 
 
 
 
-
-
-
-
-
-
-
-    <!-- <div class="container">
-        <nav>Navbar</nav>
-        <main>Main</main>
-        <div id="sidebar">Sidebar</div>
-        <div id="content1">Content1</div>
-        <div id="content2">Content2</div>
-        <div id="content3">Content3</div>
-        <footer>Footer</footer>
-    </div> -->
 </body>
 </html>
