--- a/DeconTrailerOperations/00index.html
+++ b/DeconTrailerOperations/00index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/_nav.css">
     <link rel="stylesheet" href="./css/_header.css">
-    <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/_content.css">
+    <link rel="stylesheet" href="./css/index.css">
     <style>
 
         /*
@@ -142,9 +142,16 @@
 
         <div id="preInformation" class="container content-container">
             <div class="illustration">
-                <img src="./images/stock/IMG_20220609_151823544_HDR.jpg" alt="">
+            </div><!--END .illustration-->
+            <div class="message">
+                <h2>What you will learn:</h2>
+                <ul>
+                    <li>Start Up</li>
+                    <li>Decon Operations</li>
+                    <li>Tear Down</li>
+                    <li>Transportation</li>
+                </ul>
             </div>
-            
         </div>
 
 
