--- a/DeconTrailerOperations/00index.html
+++ b/DeconTrailerOperations/00index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/_nav.css">
     <link rel="stylesheet" href="./css/_header.css">
     <link rel="stylesheet" href="./css/_content.css">
+    <link rel="stylesheet" href="./css/_content_controller.css">
     <link rel="stylesheet" href="./css/index.css">
     <style>
 
@@ -158,7 +159,12 @@
 
 
         <div class="container content-controller-container">
-            <a href="#">Begin</a>
+            <div class="left">
+
+            </div>
+            <div class="right">
+                <a class="btn" href="#">Begin</a>
+            </div>
         </div>
     </div>
 
