keep css rules separated

--- a/DeconTrailerOperations/00index.html
+++ b/DeconTrailerOperations/00index.html
@@ -98,7 +98,7 @@
     <div class="main-container">
         <nav>
             <div class="container nav-container">
-                <a id="logo" href="">Decon Trailer Operations Manual</a>
+                <a id="logo" href="./00index.html">Decon Trailer Operations Manual</a>
                 <ul class="nav-menu">
                     <li>
                         <a id="startUp_mainNavItem" href="#">Start Up</a>
@@ -137,13 +137,13 @@
 
         <header>
             <h1>NG-C130 Gen3 Mass Decon Trailer Operations Manual</h1>
-            
         </header>
 
 
 
         <div id="preInformation" class="container content-container">
             <div class="illustration">
+
             </div><!--END .illustration-->
             <div class="message">
                 <h2>What you will learn:</h2>
@@ -153,19 +153,19 @@
                     <li>Tear Down</li>
                     <li>Transportation</li>
                 </ul>
-            </div>
-        </div>
+            </div><!-- END .message -->
+        </div><!-- END #preInformation .content-container -->
 
 
 
         <div class="container content-controller-container">
             <div class="left">
 
-            </div>
+            </div><!-- END .left -->
             <div class="right">
-                <a class="btn" href="#">Begin</a>
-            </div>
-        </div>
+                <a class="btn" href="./01startup.html">Begin</a>
+            </div><!-- END .right -->
+        </div><!-- END .content-controller-container -->
     </div>
 
 
