still need to get a hang of grid properties

--- a/DeconTrailerOperations/01startup.html
+++ b/DeconTrailerOperations/01startup.html
@@ -57,7 +57,21 @@
         </header>
 
         <div id="preInformation" class="container content-container">
-            
+            <div class="topic">
+                <h2>Start Up</h2>
+            </div>
+            <div class="message">
+                <p>
+                    <strong>This section will cover:</strong>
+                </p>
+                <ul>
+                    <li><a href="#">Location Selection</a></li>
+                    <li><a href="#">Powering the Trailer On</a></li>
+                    <li><a href="#">Set Up Trailer</a></li>
+                    <li><a href="#">Flushing the Glycol</a></li>
+                    <li><a href="#">Purging Air</a></li>
+                </ul>
+            </div>
         </div><!-- END #preInformation .content-contianer -->
 
         <div class="container content-controller-container">
