--- a/DeconTrailerOperations/0101locationselection.html
+++ b/DeconTrailerOperations/0101locationselection.html
@@ -1,19 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/_nav.css">
-    <link rel="stylesheet" href="./css/_header.css">
-    <link rel="stylesheet" href="./css/_content.css">
-    <link rel="stylesheet" href="./css/_content_controller.css">
-    <link rel="stylesheet" href="./css/startup.css">
 </head>
-
 <body>
     <div class="main-container">
         <nav>
@@ -54,25 +46,11 @@
 
         <header>
             <h1>NG-C130 Gen3 Mass Decon Trailer Operations Manual</h1>
-            <h2>Start Up</h2>
+            <h2>Start Up -> Location Selection</h2>
         </header>
 
         <div id="preInformation" class="container content-container">
-            <div class="topic">
-                <h2>Start Up</h2>
-            </div>
-            <div class="message">
-                <p>
-                    <strong>This section will cover:</strong>
-                </p>
-                <ul>
-                    <li><a href="#">Location Selection</a></li>
-                    <li><a href="#">Powering the Trailer On</a></li>
-                    <li><a href="#">Set Up Trailer</a></li>
-                    <li><a href="#">Flushing the Glycol</a></li>
-                    <li><a href="#">Purging Air</a></li>
-                </ul>
-            </div>
+            
         </div><!-- END #preInformation .content-contianer -->
 
         <div class="container content-controller-container">
@@ -80,12 +58,9 @@
                 <a href="./00index.html" class="btn">Previous</a>
             </div><!-- END .left -->
             <div class="right">
-                <a class="btn" href="./0101locationselection.html">Next</a>
+                <a class="btn" href="./01startup.html">Next</a>
             </div><!-- END .right -->
         </div>
-        <!--END .content-controller-container -->
     </div>
-
 </body>
-
 </html>
