Continue to style the nav menu

--- a/DeconTrailerOperations/00index.html
+++ b/DeconTrailerOperations/00index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +13,6 @@
     <link rel="stylesheet" href="./css/_content_controller.css">
     <link rel="stylesheet" href="./css/index.css">
     <style>
-
         /*
         flex
         justify-content: aligns items horizontally
@@ -87,43 +87,54 @@
             }
             
         } */
-
-
-
-
-        
     </style>
 </head>
+
 <body>
     <div class="main-container">
         <nav>
             <div class="container nav-container">
-                <a id="logo" href="./00index.html">Decon Trailer Operations Manual</a>
+                <p>
+                    Contents:
+                </p>
                 <ul class="nav-menu">
                     <li>
-                        <a id="startUp_mainNavItem" href="#">Start Up</a>
-                        <ul id="startUp_subMenu" class="nav-subMenu">
-                            <li><a href="#">Location Selection</a></li>
-                            <li><a href="#">Powering the Trailer</a></li>
-                            <li><a href="#">Set Up Trailer</a></li>
-                            <li><a href="#">Flushing Glycol</a></li>
-                            <li><a href="#">Purging Air</a></li>
-                        </ul>
+                        <a href="./01startup.html">Start Up</a>
+                        <!-- <ol class="nav-subMenu">
+                            <li>
+                                <a href="./0101locationselection.html">Location Selection</a>
+                            </li>
+                            <li>
+                                <a href="#">Powering the Trailer</a>
+                            </li>
+                            <li>
+                                <a href="#">Set Up Trailer</a>
+                            </li>
+                            <li>
+                                <a href="#">Flushing Glycol</a>
+                            </li>
+                            <li>
+                                <a href="#">Purging Air</a>
+                            </li>
+                        </ol> -->
                     </li>
                     <li>
-                        <a class="deconOps_mainNavItem" href="#">Decon Operations</a>
-                        <ul id="deconOps_subMenu" class="nav-subMenu">
+                        <a href="./02deconoperations.html">Decon Operations</a>
+
+                        <ul class="nav-subMenu">
 
                         </ul>
                     </li>
                     <li>
-                        <a id="tearDwn_mainNavItem" href="#">Tear Down</a>
-                        <ul id="tearDwn_subMenu" class="nav-subMenu">
+                        <a href="./03teardown.html">Tear Down</a>
+
+                        <ul class="nav-subMenu">
 
                         </ul>
                     </li>
                     <li>
-                        <a id="trans_mainNavItem" href="#">Transportations</a>
+                        <a href="./04preparingfortransport.html">Transportation</a>
+
                         <ul class="nav-subMenu">
 
                         </ul>
@@ -144,7 +155,8 @@
         <div id="preInformation" class="container content-container">
             <div class="illustration">
 
-            </div><!--END .illustration-->
+            </div>
+            <!--END .illustration-->
             <div class="message">
                 <h2>What you will learn:</h2>
                 <ul>
@@ -172,4 +184,5 @@
 
 
 </body>
+
 </html>
