--- a/DeconTrailerOperations/0101locationselection.html
+++ b/DeconTrailerOperations/0101locationselection.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/_nav.css">
+    <link rel="stylesheet" href="./css/_header.css">
+    <link rel="stylesheet" href="./css/_content.css">
+    <link rel="stylesheet" href="./css/_content_controller.css">
+    <link rel="stylesheet" href="./css/startup.css">
 </head>
 <body>
     <div class="main-container">
